--- a/css/department.css
+++ b/css/department.css
@@ -137,8 +137,10 @@ body{
 }
 /* 紅色卡片 */
 .red1{
+    perspective: 500px;
     width: 284px;
     position: relative;
+    transition: 2s;
 }
 
 .red1_front{
@@ -163,9 +165,15 @@ body{
     transform: rotateY(0deg);
 }
 
+.red1:hover .gif1{
+    /* transform: scale(1.2); */
+}
+
+
 /* 綠色卡片 */
 
 .green2{
+    perspective: 500px;
     width: 284px;
     position: relative;
 }
@@ -194,6 +202,7 @@ body{
 
 /* 藍色卡片 */
 .blue3{
+    perspective: 500px;
     width: 284px;
     position: relative;
 }
@@ -222,6 +231,7 @@ body{
 
 /* 黃色卡片 */
 .yellow4{
+    perspective: 500px;
     width: 284px;
     position: relative;
 }
@@ -246,6 +256,42 @@ body{
 
 .yellow4:hover .yellow4_back{
     transform: rotateY(0deg);
+}
+
+/* gif圖檔 */
+.gif1{
+    max-width: 60%;
+    border-radius: 10%;
+    border: 3px solid #BD9F6D;
+    position: absolute;
+    top: 160px;;
+    left: 52px;
+    transition: 1s;
+}
+
+/* 卡片文字內容 */
+.card_text{
+    padding: 35px;
+    position: absolute;
+    top:330px;
+    left: 8px;
+}
+
+.card_text h2{
+    color: white;
+    font-weight: bold;
+    font-size: 20px;
+    text-align: center;
+    margin-bottom: 30px;
+    border-bottom: 2px solid #BD9F6D;
+    padding: 10px;
+}
+
+.card_text p{
+    line-height: 1.6;
+    color: white;
+    font-weight: bold;
+    font-size: 16px;
 }
 
  /* Footer */
