--- a/css/activity2.css
+++ b/css/activity2.css
@@ -45,7 +45,7 @@ body{
 }
 
   /* 選單列 */
-.nav {
+  .nav {
     grid-area: nav; 
     width: 950px;
     padding-top: 30px;
@@ -72,6 +72,34 @@ body{
     color: #BD9F6D;
     text-align: center;
     font-weight: bold;
+    position: relative;
+}
+
+.navbar_main::before{
+    content: "";
+    position: absolute;
+    transition: 0.3s;
+    left: 50px;
+    bottom: 15px;
+    width: 60px;
+    height: 1px;
+    background-color: white;
+    transform: scaleX(0);
+}
+
+.navbar_inner{
+    border: 2px solid #BD9F6D;
+    box-sizing: border-box;
+    display: block;
+    margin-top: -5px;
+    background-color:#151A2D;
+    position: absolute;
+    z-index: 2;
+    display: none;
+}
+
+.navbar_inner a{
+    width: 160px;
 }
 
 /* 關於我們Banner */
@@ -430,4 +458,13 @@ body{
 .navbar a:hover{
     color: white;
     transform: scale(1.2);
+}
+
+.navbar :nth-child(5):hover .navbar_inner{
+    display: block;
+    opacity: 0.8;
+}
+
+.navbar_main:hover:before{
+    transform: scaleX(1);
 }
