--- a/css/index.css
+++ b/css/index.css
@@ -8,6 +8,104 @@ body{
     margin: 0 auto;
 }
 
+.header{
+    background-color: #232845;
+    box-sizing: border-box;
+    position: relative;
+    width: 1135px;
+    margin: 0 auto;
+}
+
+/* 口口口口口口口口口口第一區塊口口口口口口口口口口*/
+
+/* logo */
+.logo {}
+
+.logo a{}
+       
+.logo img{
+    width: 125px;
+    position: absolute;
+    top:30px;
+    left:0px;
+    z-index: 1;
+}
+
+  /* 選單列 */
+.nav {
+    grid-area: nav; 
+    width: 950px;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    margin-left: auto;
+}
+
+.navbar{
+    display: flex;
+    background-image: url(../img/about/nav.png);
+    background-repeat: no-repeat;  
+    background-size: contain;
+    justify-content: flex-end;
+}
+
+.navbar li{
+    flex-grow: 1;
+}
+
+.navbar a{
+    display: block;
+    line-height: 50px;
+    text-decoration: none;
+    color: #BD9F6D;
+    text-align: center;
+    font-weight: bold;
+    position: relative;
+}
+
+.navbar_main::before{
+    content: "";
+    position: absolute;
+    transition: 0.3s;
+    left: 50px;
+    bottom: 15px;
+    width: 60px;
+    height: 1px;
+    background-color: white;
+    transform: scaleX(0);
+}
+
+.navbar_inner{
+    border: 2px solid #BD9F6D;
+    box-sizing: border-box;
+    display: block;
+    margin-top: -5px;
+    background-color:#151A2D;
+    position: absolute;
+    z-index: 2;
+    display: none;
+}
+
+.navbar_inner a{
+    width: 160px;
+}
+
+
+
+/* 動畫互動效果 */
+.navbar a:hover{
+    color: white;
+    transform: scale(1.2);
+}
+
+.navbar :nth-child(5):hover .navbar_inner{
+    display: block;
+    opacity: 0.8;
+}
+
+.navbar_main:hover:before{
+    transform: scaleX(1);
+}
+
 /* banner 輪播圖 */
 #sliderBoard{                      /*div*/
     width: 100%;
@@ -247,4 +345,109 @@ body{
     grid-column: 5/11;
     grid-row: 3/6;
     outline: 0.3px solid #BD9F6D;
+}
+
+/* 口口口口口口口口口口第四區塊footer口口口口口口口口口口*/
+/* Footer */
+.footer {
+    background-color: #151A2D;
+    padding-top: 30px;
+    min-width: 1135px;
+}
+/* footer:上半部 */
+.footer_top{
+    width: 1135px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    /* margin-top: 30px; */
+    margin-bottom: 30px;
+}
+
+.footer_top_left{
+    margin-left: 50px;
+    margin-right: 100px;
+}
+
+.footer_logo{
+    width: 145px;
+    height: 210px;
+    margin-left: 150px;
+}
+
+.footer_top_left h1{
+    font-size: 24px;
+    font-weight: bold;
+    color: #BD9F6D;
+    opacity: 0.6;
+    line-height: 1.6;
+    margin-bottom: 30px;
+}
+
+.footer_top_left span{
+    font-size: 16px;
+    font-weight: bold;
+    color: white;
+    opacity: 0.6;
+    line-height: 1.6;
+}
+
+.footer_top_right{
+    align-self: flex-end;
+    margin-right: 150px;
+    margin-bottom: 10px;
+}
+
+.footer_top_right ul{
+    display: flex;
+}
+
+.footer_top_right li{
+    margin-right: 30px;
+}
+
+.footer_top_right img{
+    width: 40px;
+    height: 40px;
+}
+
+  /* footer:下半部 */
+.footer_bottom{
+    width: 1135px;
+    margin: 0 auto;
+    border-top: 0.5px solid #BD9F6D;
+}
+
+.footer_bottom h3{
+    font-size: 10px;
+    color: #BD9F6D;
+    font-weight: bold;
+    text-align: center;
+    margin-top: 30px;
+}
+
+.footer_bottom p{
+    font-size: 10px;
+    color: #BD9F6D;
+    font-weight: bold;
+    text-align: center;
+    margin-top: 60px;
+    padding-bottom: 30px;
+}
+
+
+/* 動畫互動效果 */
+.navbar a:hover{
+    color: white;
+    transform: scale(1.2);
+}
+
+.navbar :nth-child(5):hover .navbar_inner{
+    display: block;
+    opacity: 0.8;
+}
+
+.navbar_main:hover:before{
+    transform: scaleX(1);
 }
