--- a/css/about.css
+++ b/css/about.css
@@ -429,6 +429,72 @@ body{
     animation-iteration-count: infinite;
 }
 
+.lightbox{
+    background-color: #00000066;
+    width: 100%;
+    height: 100%;
+    text-decoration: none;
+
+    position: absolute;
+    top:0;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    /* align-items: center; */
+    z-index: -1;
+    opacity: 0;
+}
+
+.lightbox:target{
+    z-index: 1;
+    opacity: 1;
+    height: 100%;
+    transition: 1.5s;
+}
+
+.paper{
+    width: 500px;
+    height: 500px;
+    background-image: url("../img/about/paper.png");
+    background-size: contain;
+    animation-name: scale1;
+    animation-duration: 5s;
+    animation-iteration-count: infinite;
+}
+
+.paper_text{
+    padding: 20px;
+    box-sizing: border-box;
+    width: 300px;
+    height: 300px;
+    margin: 100px auto;
+    text-shadow: 0.2em 0.2em 0.2em gray;
+}
+
+.paper_text h2{
+    font-family: 'Yusei Magic', sans-serif;
+    color: white;
+    font-size: 36px;
+    font-weight: bold;
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+.paper_text p{
+    font-family: 'Yusei Magic', sans-serif;
+    color: #151A2D;
+    font-size: 16px;
+    font-weight: bold;
+    text-align: center;
+    line-height: 1.6;
+}
+
+/* 地圖燈箱動畫 */
+@keyframes scale1 {
+    0% { transform: scale(1); }
+    50%  { transform: scale(1.1); }
+    100%   { transform: scale(1); }   
+}
 
   /* Footer */
 .footer {
