--- a/css/about.css
+++ b/css/about.css
@@ -139,6 +139,8 @@ body{
 
 .header_top a{
     text-decoration: none;
+    position: relative;
+    display: block;
 }
 
 .header_top img{
@@ -148,13 +150,37 @@ body{
 }
 
 .header_top h5{
-    font-size: 18px;
-    color: #BD9F6D; 
+    color: #BD9F6D;
+    font-weight: bold;
+}
+
+.header_top h5::after{
+    content: "";
+    position: absolute;
+    transition: 0.3s;
+    left: 0px;
+    bottom: -3px;
+    width: 100%;
+    height: 1px;
+    background-color: #BD9F6D;
+    transform: scaleX(0);
 }
 
 .header_top h6{
-    font-size: 18px;
     color: white;
+    font-weight: bold;
+}
+
+.header_top h6::after{
+    content: "";
+    position: absolute;
+    transition: 0.3s;
+    left: 0px;
+    bottom: -3px;
+    width: 65px;
+    height: 1px;
+    background-color: white;
+    transform: scaleX(0);
 }
 
 /* 校長:校長介紹 */
@@ -585,6 +611,7 @@ body{
 
 
 /* 動畫互動效果 */
+/* nav按鈕 */
 .navbar a:hover{
     color: white;
     transform: scale(1.2);
@@ -598,5 +625,26 @@ body{
 .navbar_main:hover:before{
     transform: scaleX(1);
 }
+
+/* 導覽列hover */
+.header_top h5:hover{
+    color: #BD9F6D;
+    transform: scale(1.2);
+}
+
+.header_top h6:hover{
+    color: white;
+    transform: scale(1.2);
+}
+
+.header_top h5:hover:after{
+    transform: scaleX(1);
+}
+
+.header_top h6:hover:after{
+    transform: scaleX(1);
+}
+
+
 
   
