--- a/css/guest.css
+++ b/css/guest.css
@@ -133,6 +133,8 @@ body{
 
 .guide a{
     text-decoration: none;
+    position: relative;
+    display: block;
 }
 
 .guide img{
@@ -142,12 +144,37 @@ body{
 }
 
 .guide h5{
-    font-size: 18px;
     color: #BD9F6D;
+    font-weight: bold;
 }
+
+.guide h5::after{
+    content: "";
+    position: absolute;
+    transition: 0.3s;
+    left: 0px;
+    bottom: -3px;
+    width: 100%;
+    height: 1px;
+    background-color: #BD9F6D;
+    transform: scaleX(0);
+}
+
 .guide h6{
-    font-size: 18px;
     color: white;
+    font-weight: bold;
+}
+
+.guide h6::after{
+    content: "";
+    position: absolute;
+    transition: 0.3s;
+    left: 0px;
+    bottom: -3px;
+    width: 100%;
+    height: 1px;
+    background-color: white;
+    transform: scaleX(0);
 }
 
 /* 任務難度分級 */
@@ -458,5 +485,24 @@ body{
 }
 
 .navbar_main:hover:before{
+    transform: scaleX(1);
+}
+
+/* 導覽列hover */
+.guide h5:hover{
+    color: #BD9F6D;
+    transform: scale(1.2);
+}
+
+.guide h6:hover{
+    color: white;
+    transform: scale(1.2);
+}
+
+.guide h5:hover:after{
+    transform: scaleX(1);
+}
+
+.guide h6:hover:after{
     transform: scaleX(1);
 }
