--- a/css/guest.css
+++ b/css/guest.css
@@ -216,13 +216,217 @@ body{
     margin-right: 10px;
 }
 
-/* 商城連結 */
+/* 商城連結-硬幣 */
 .shop{
-    margin-top: -50px;
-    margin-left: 65px;
+    /* margin-top: -50px;
+    margin-left: 65px; */
+    /* width : 200px; */
+    /* height : 300px; */
+    /* display : flex;
+    align-items : center;
+    justify-content  : center; */
+    margin-left: 60px;
+    width: 200px;
+    height: 45px;
 }
 
-.shop a{
+.shop > a{
+    text-decoration: none;
+    font-size: 20px;
+    color: #BD9F6D;
+    background-color: #151A2D;
+    border: 0.5px solid #BD9F6D;
+    font-weight: bold;
+    display: block;
+    line-height: 45px;
+    text-align: center;
+}
+
+/* .animation-container {
+    display: relative;
+    width : 200px;
+    height : 300px;
+  } */
+  
+  .ccontainer {
+    position: relative;
+    /* top : 30px; */
+    /* height : 300px;
+    width : 190px; */
+    transform : scale(0.5) translateX(0) scaleY(0.7);
+  }
+  
+  .y-axis-container {
+     animation: bounce 2.6s infinite ease-in-out;
+  }
+  
+  /* .shadow {
+     animation: scaling 2.6s infinite ease-in-out;
+  } */
+  
+  .coin {
+    position : absolute;
+    height : 180px;
+    left : 250px;
+    top: -110px;
+    width: 102px;
+    background : gold;
+    border-radius : 100%;
+    overflow : hidden;
+  }
+  
+  /* .side-coin {
+    position : absolute;
+    left : 85px;
+    height : 300px;
+    width: 35px;
+    background : #f5b642;
+  } */
+  
+  .side {
+    position: absolute;
+    background : #f5b642;
+    left : 263px;
+    width : 99px;
+    height : 182.4px;
+  }
+  
+  .shine {
+    width : 240px;
+    height : 12px;
+    background : rgba(255,255,255,0.65);
+    transform: rotate(25deg);
+    animation : shine 5s infinite; 
+  }
+  
+  .flash {
+    z-index: 200;
+    position : absolute;
+    width : 15px;
+    height : 15px;
+    background : white;
+    top: -80px;
+    right : -160px;
+    animation : flash 7s infinite;
+  }
+  
+  .dai {
+    position : absolute;
+    width: 60px;
+    height : 60px;
+    background : #faf20a;
+    border: 1px solid white;
+    transform : rotate(53deg) skew(26deg);
+    top: 56.4px;
+    left : 21px;
+    overflow : hidden;
+  }
+  
+  .cutout {
+    z-index : 20;
+    width : 150%;
+    height : 150%;
+    background : #ffee38;
+    transform : rotate(45deg);
+    position : absolute;
+    top : 20px;
+    left : 15px;
+  }
+  
+  .dai-shadow {
+    z-index : 20;
+    width : 150%;
+    height : 150%;
+    background : rgba(0,0,0,0.07);
+    transform : rotate(45deg);
+    position : absolute;
+    top : 20px;
+    right : 15px;
+  }
+  
+  .inner-dai {
+    position : relative;
+    background : white;
+    height : 42px;
+    width: 42px;
+    top : 10px;
+    left : 10px;
+  }
+  
+  .inner-inner-dai {
+    position : relative;
+    background : #ffee38;
+    width: 12px;
+    height : 12px;
+    top : 14px;
+    left : 14px;
+  }
+  
+  .shadow { 
+    position : relative;
+    left : 175px;
+    top : 30px;
+    background : rgba(0,0,0,0.2);
+    height : 18px;
+    width : 60px;
+    animation : scaling 2.6s infinite;
+    border-radius: 100%;
+  }
+  
+  @keyframes bounce {
+    20% {
+      animation-timing-function: ease-out;
+      transform: translateY(-60px);
+    }
+    
+     50% {
+      animation-timing-function: ease-out;
+      transform: translateY(-80px);
+    }
+  }
+  
+  @keyframes scaling {
+    20% {
+      transform: scale(0.6);
+    }
+    
+    50% {
+      transform: scale(0.5);
+    }
+  }
+  
+  @keyframes flash {
+    0% {
+      transform : rotate(0deg) scale(0);
+    }
+    8% {
+      transform : rotate(0deg) scale(0);
+    }
+    10% {
+      transform : rotate(150deg) scale(1.8);
+    }
+    15% {
+      transform : rotate(45deg) scale(0);
+    }
+    100% {
+      transform : rotate(45deg) scale(0);
+    }
+  }
+  
+  
+  @keyframes shine {
+    20% {
+      transform : rotate(25deg) translateY(400px);
+    }
+    
+    100% {
+      transform : rotate(25deg) translateY(400px);
+    }
+  }
+  
+  
+
+/* .shop a{
     border: 6px solid #BD9F6D;
     border-radius: 50%/ 50%;
     height: 120px;
@@ -233,9 +437,9 @@ body{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-}
+} */
 
-.shop span{
+/* .shop span{
     margin-top: 10px;
     font-size: 20px;
 }
@@ -245,7 +449,7 @@ body{
     height: 55px;
     display: block;
     margin-top: 10px;
-}
+} */
 
 /* 任務看板-左半區-委託單 */
 .main_left{
@@ -338,7 +542,7 @@ body{
     font-weight: bold;
 }
 
-.coin{
+.money{
     margin: 0 10px;
 }
 
