--- a/css/index.css
+++ b/css/index.css
@@ -129,21 +129,21 @@ body{
 }
 
 .banner1{
-    background-image: url(../img/mainpage/banner1.png);
+    background-image: url(../img/mainpage/banner1-1.png);
     background-size: cover;
     width: 100%;
     height: 100%;
 }
 
 .banner2{
-    background-image: url(../img/mainpage/banner4.png);
+    background-image: url(../img/mainpage/banner2-1.png);
     background-size: cover;
     width: 100%;
     height: 100%;
 }
 
 .banner3{
-    background-image: url(../img/mainpage/banner3.png);
+    background-image: url(../img/mainpage/banner3-1.png);
     background-size: cover;
     width: 100%;
     height: 100%;
@@ -312,39 +312,42 @@ body{
     display: grid;
     grid-template-columns: repeat(10,1fr);
     grid-template-rows: repeat(5,1fr);
+    column-gap: 10px;
+    row-gap: 10px;
     margin-bottom: 30px;
+    box-sizing: border-box;
 }
 
 .life1{
-    width: 445px;
-    height: 662px;
+    width: 100%;
+    height: 100%;
     grid-column: 1/5;
     grid-row: 1/6;
-    outline: 0.3px solid #BD9F6D;
+    border: 0.3px solid #BD9F6D;
 }
 
 .life2{
-    width: 330px;
-    height: 258px;
+    width: 100%;
+    height: 100%;
     grid-column: 5/8;
     grid-row: 1/3;
-    outline: 0.3px solid #BD9F6D;
+    border: 0.3px solid #BD9F6D;
 }
 
 .life3{
-    width: 330px;
-    height: 258px;
+    width: 100%;
+    height: 100%;
     grid-column: 8/11;
     grid-row: 1/3;
-    outline: 0.3px solid #BD9F6D;
+    border: 0.3px solid #BD9F6D;
 }
 
 .life4{
-    width: 670px;
-    height: 389px;
+    width: 100%;
+    height: 100%;
     grid-column: 5/11;
     grid-row: 3/6;
-    outline: 0.3px solid #BD9F6D;
+    border: 0.3px solid #BD9F6D;
 }
 
 /* 口口口口口口口口口口第四區塊footer口口口口口口口口口口*/
