--- a/css/about.css
+++ b/css/about.css
@@ -263,12 +263,20 @@ body{
 }
 
 .main_left a{
-    font-size: 16px;
-    font-weight: bold;
-    color:#BD9F6D;
-    text-decoration: none;
-    display: block;
+    
     margin-top: 20px;
+}
+
+.main_left a::after{
+    content: "";
+    position: absolute;
+    transition: 0.3s;
+    left: 0px;
+    bottom: -3px;
+    width: 100%;
+    height: 1px;
+    background-color: #BD9F6D;
+    transform: scaleX(0);
 }
 
 /* 校園新聞:傑出校友 */
@@ -656,6 +664,10 @@ body{
 }
 
 .navbar_main:hover:before{
+    transform: scaleX(1);
+}
+
+.main_left a:hover:after{
     transform: scaleX(1);
 }
 
