--- a/css/index.css
+++ b/css/index.css
@@ -283,10 +283,23 @@ body{
     font-weight: bold;
     color:#BD9F6D;
     text-decoration: none;
-    display: block;
+    display: inline-block;
     text-align: right;
     margin-top: 30px;
     margin-bottom: 30px;
+    position: relative;
+}
+
+.news a::after{
+    content: "";
+    position: absolute;
+    transition: 0.3s;
+    left: 0px;
+    bottom: -3px;
+    width: 100%;
+    height: 1px;
+    background-color: #BD9F6D;
+    transform: scaleX(0);
 }
 
 /* 口口口口口口口口口口第三區塊口口口口口口口口口口*/
@@ -484,6 +497,10 @@ body{
 }
 
 .navbar_main:hover:before{
+    transform: scaleX(1);
+}
+
+.news a:hover:after{
     transform: scaleX(1);
 }
 
