--- a/css/index.css
+++ b/css/index.css
@@ -283,11 +283,10 @@ body{
     font-weight: bold;
     color:#BD9F6D;
     text-decoration: none;
-    display: inline-block;
-    text-align: right;
     margin-top: 30px;
     margin-bottom: 30px;
-    position: relative;
+    float: right;
+    /* line-height: 16px; */
 }
 
 .news a::after{
