--- a/css/about.css
+++ b/css/about.css
@@ -263,8 +263,15 @@ body{
 }
 
 .main_left a{
-    
-    margin-top: 20px;
+    font-weight: bold;
+    color:#BD9F6D;
+    text-decoration: none;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    line-height: 16px;
+    float: right;
+    display: block;
+    position: relative;
 }
 
 .main_left a::after{
