--- a/css/department.css
+++ b/css/department.css
@@ -201,7 +201,11 @@ body{
    width: 150px;
    margin-top: -500px;
    margin-left: 68px;
-   /* box-shadow: 100px 12px 7px rgba(0, 0, 0, 0.7); */
+   border-radius: 50%;
+   box-sizing: border-box;
+   outline:0.5px solid #BD9F6D;
+   display: block;
+   box-shadow: 5px 5px 7px rgba(0, 0, 0, 0.7);
    animation-name: scale2;
    animation-duration: 3s;
    animation-iteration-count: infinite;
