--- a/css/shop.css
+++ b/css/shop.css
@@ -190,6 +190,27 @@ body{
     margin-left: 120px;
 }
 
+.list h4{
+    font-size: 16px;
+    color: #BD9F6D;
+    font-weight: bold;
+    margin-bottom: 10px;
+    position: relative;
+    display: inline-block;
+}
+
+.list h4::after{
+    content: "";
+    position: absolute;
+    transition: 0.3s;
+    left: 0px;
+    bottom: -3px;
+    width: 100%;
+    height: 1px;
+    background-color: #BD9F6D;
+    transform: scaleX(0);
+}
+
 /* 套組icon */
 .set::before{
     content: "";
@@ -240,14 +261,6 @@ body{
     display: block;
     text-align: end;
      
-}
-
-
-.list h4{
-    font-size: 16px;
-    color: #BD9F6D;
-    font-weight: bold;
-    margin-bottom: 10px;
 }
 
 .underline{
@@ -460,6 +473,14 @@ body{
 }
 
 .navbar_main:hover:before{
+    transform: scaleX(1);
+}
+
+.list h4:hover{
+    color: white;
+}
+
+.list h4:hover:after{
     transform: scaleX(1);
 }
 
